examples/type_system/failing/21_perform_unknown_operation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/21_perform_unknown_operation.flx
// error[E404]: Unknown Effect Operation
//
// Effect `Console` has no declared operation `read`.
//
//   examples/type_system/failing/21_perform_unknown_operation.flx:28:5
//    |
// 28 |     perform Console.read("x")
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^
//    |     ------------------------- unknown operation in perform
//
// Hint:
//   Add the operation to the effect declaration or rename it.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E404

// E404: perform uses an operation that is not declared by the effect.

effect Console {
    print: String -> ()
}

fn bad() -> Unit with Console {
    perform Console.read("x")
}

fn main() -> Unit with IO {
    bad() handle Console {
        print(resume, _msg) -> resume(())
    };
}
